# txlog

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE
.github/workflows/: cpp-ci.yml
cl/: Makefile  qlfile  txlog.asd
cl/src/: client.lisp  daemon.lisp  edn.lisp  log.lisp  package.lisp  source.lisp
cl/test/: test-log.lisp
clj/: deps.edn
clj/src/txlog/: core.clj  source.clj
clj/test/txlog/: core_test.clj
cpp/: CMakeLists.txt  CMakePresets.json
cpp/cmake/: txlog-cpp-config.cmake.in
cpp/include/txlog/: txlog.hpp
cpp/src/: txlog.cpp
cpp/tests/: CMakeLists.txt  test_txlog.cpp
scripts/: install-hooks.sh  pre-commit
